--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link type="text/css"rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <title>Welcome to Hoooolan's site</title>
@@ -10,14 +11,16 @@
 
     <div id="nav">
       <div class="container">
-        <div class="menu">
-          <div class="menu">
-            <a href="#about">I AM...</a>
-            <a href="#my-persona">My Persona</a>
-            <a href="#Mur-Mur">Mur Mur...</a>
-            <a href="#contact-me">contact me</a>
-          </div>
-        </div>
+        <button type="button" class="menu-button">
+          三
+        </button>
+        <input type="checkbox" class="menu-button-checkbox">
+         <div class="menu">
+            <a class="menulist" href="#about">I AM...</a>
+            <a class="menulist" href="#my-persona">My Persona</a>
+            <a class="menulist" href="#Mur-Mur">Mur Mur...</a>
+            <a class="menulist" href="#contact-me">contact me</a>
+         </div>
       </div>
     </div>
     <div id="content">
@@ -112,13 +115,13 @@
            <div class="bala-first">
              <ul>
                <li class="scale">那份QA的工作技術含量實在不高，只學會3C產品與一些軟體的操作，還有打報告...</li>
-               <li class="scale">銀行業務不難，但周而復始的例行作業，加上澳客隨機轟炸，業績門檻年年翻倍...個人不是很推薦</li>
+               <li class="scale">銀行周而復始的例行作業，加上澳客隨機轟炸，業績門檻年年翻倍...個人不是很推薦</li>
                <li class="scale">回南部後學做現場弱電，今年考過乙級室配，發現學習成長是永劫回歸的概念，在這時決定重練程式</li>
              </ul>
            </div>
-           <div class="bala-two">
-             <p>老爸是賣茶葉，早期有賣紫砂壺，計畫做個紫砂壺錦小網站</p>
+
              <div id="teapot">
+               <p>計畫做紫砂壺錦小網站</p>
                <div class="teapotpic"><img src="img/1.jpg" alt="不見惹!?"></div>
                <div class="teapotpic"><img src="img/2.jpg" alt="不見惹!?"></div>
                <div class="teapotpic"><img src="img/3.jpg" alt="不見惹!?"></div>
@@ -131,7 +134,6 @@
                <div class="teapotpic"><img src="img/10.jpg" alt="不見惹!?"></div>
                <div class="teapotpic"><img src="img/11.jpg" alt="不見惹!?"></div>
              </div>
-           </div>
 
        </div>
       </div>
